nixidy/generated/prod/shoko/Deployment-shoko.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: shoko
    app.kubernetes.io/instance: shoko
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shoko
  name: shoko
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: shoko
      app.kubernetes.io/instance: shoko
      app.kubernetes.io/name: shoko
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: shoko
        app.kubernetes.io/instance: shoko
        app.kubernetes.io/name: shoko
    spec:
      automountServiceAccountToken: false
      containers:
        - image: shokoanime/server:v5.3.1@sha256:8bfa235fc36a7147443679c242368f30a532e12de3f52e0de2dcc7743fa37044
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8111
            timeoutSeconds: 1
          name: shoko
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8111
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8111
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /home/shoko/.shoko
              name: config
            - mountPath: /media/tv
              name: media-tv
              readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: shoko
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: shoko
        - name: media-tv
          persistentVolumeClaim:
            claimName: media-tv
